--- a/cms/server/po/messages.pot
+++ b/cms/server/po/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-01-05 15:52+0000\n"
+"POT-Creation-Date: 2014-01-07 17:43+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -269,6 +269,32 @@ msgstr ""
 msgid "%(seconds)0.3f s"
 msgstr ""
 
+msgid "Too many print jobs!"
+msgstr ""
+
+#, python-format
+msgid "You have reached the maximum limit of at most %d print jobs."
+msgstr ""
+
+msgid "Invalid format!"
+msgstr ""
+
+msgid "File too big!"
+msgstr ""
+
+#, python-format
+msgid "Each file be at most %d bytes long."
+msgstr ""
+
+msgid "Print job storage failed!"
+msgstr ""
+
+msgid "Print job received"
+msgstr ""
+
+msgid "Your print job has been received."
+msgstr ""
+
 msgid "%Y-%m-%d"
 msgstr ""
 
@@ -406,8 +432,8 @@ msgstr[1] ""
 
 #, python-format
 msgid ""
-"Logged in as <strong>%(first_name)s %(last_name)s</strong> <em>(%(username)s)"
-"</em>"
+"Logged in as <strong>%(first_name)s %(last_name)s</strong> "
+"<em>(%(username)s)</em>"
 msgstr ""
 
 msgid "Logout"
@@ -475,6 +501,9 @@ msgid "Documentation"
 msgstr ""
 
 msgid "Testing"
+msgstr ""
+
+msgid "Printing"
 msgstr ""
 
 msgid "Contest Management System"
@@ -706,6 +735,46 @@ msgstr ""
 msgid "No"
 msgstr ""
 
+msgid "Print"
+msgstr ""
+
+#, python-format
+msgid ""
+"You can print %(remaining_jobs)d more source code or PDF files of up to "
+"%(max_pages)d pages each."
+msgstr ""
+
+msgid "File (text or PDF)"
+msgstr ""
+
+msgid "Submit"
+msgstr ""
+
+msgid ""
+"You cannot print anything any more as you have used up your printing quota."
+msgstr ""
+
+msgid "Previous print jobs"
+msgstr ""
+
+msgid "Date and time"
+msgstr ""
+
+msgid "Time"
+msgstr ""
+
+msgid "File name"
+msgstr ""
+
+msgid "Status"
+msgstr ""
+
+msgid "no print jobs yet"
+msgstr ""
+
+msgid "Preparing..."
+msgstr ""
+
 msgid "Compilation output"
 msgstr ""
 
@@ -860,9 +929,6 @@ msgstr ""
 msgid "Submit a solution"
 msgstr ""
 
-msgid "Submit"
-msgstr ""
-
 msgid "submission.zip"
 msgstr ""
 
@@ -895,15 +961,6 @@ msgstr ""
 
 #, python-format
 msgid "But you will have to wait until %(expiration_time)s to use it."
-msgstr ""
-
-msgid "Date and time"
-msgstr ""
-
-msgid "Time"
-msgstr ""
-
-msgid "Status"
 msgstr ""
 
 msgid "Public score"
