--- a/cmscontrib/gerpythonformat/templates/ceoi/translation.tex
+++ b/cmscontrib/gerpythonformat/templates/ceoi/translation.tex
@@ -3,3 +3,9 @@
 \def\tTask{Task}
 \def\tInput{Input}
 \def\tOutput{Output}
+\def\tSample{Sample}
+\def\tLimits{Limits}
+\def\tTimeLimit{Time limit}
+\def\TMemoryLimit{Memory limit}
+\def\tSubtask{Subtask}
+\def\tPoints{points}
