CEOI template: fixed typo

--- a/cmscontrib/gerpythonformat/templates/ceoi/contestheader.tex
+++ b/cmscontrib/gerpythonformat/templates/ceoi/contestheader.tex
@@ -9,8 +9,8 @@
 \translationheader
 
 \let\oldshowcases=\showcases
-\def\showcases{\section*{\tSample} \oldshowcases}
-\def\showlimits{\section*{\tLimits} \tTimeLimit: \timelimit \\
+\def\showcases{\subsection*{\tSample} \oldshowcases}
+\def\showlimits{\subsection*{\tLimits} \tTimeLimit: \timelimit \\
 \TMemoryLimit: \memlimit}
 
 \def\sthelper#1#2{{\sffamily\bfseries\tSubtask\ #1 (#2 \tPoints).\enspace}}
