--- a/cmscontrib/gerpythonformat/templates/ceoi/translation.tex
+++ b/cmscontrib/gerpythonformat/templates/ceoi/translation.tex
@@ -6,6 +6,6 @@
 \def\tSample{Sample}
 \def\tLimits{Limits}
 \def\tTimeLimit{Time limit}
-\def\TMemoryLimit{Memory limit}
+\def\tMemoryLimit{Memory limit}
 \def\tSubtask{Subtask}
 \def\tPoints{points}
