--- a/cmscontrib/gerpythonformat/templates/ceoi/translation.tex
+++ b/cmscontrib/gerpythonformat/templates/ceoi/translation.tex
@@ -11,3 +11,7 @@
 \def\tPoints{points}
 \def\tLanguage{Language}
 \def\myLanguage{EN}
+\def\tFeedback{Feedback}
+\def\tNoFeedback{There is no additional feedback available for this tasks. You will be only shown the verdicts for the sample case(s).}
+\def\tPartialFeedback{There is partial feedback given for this task, i.e.~you can see the verdicts for a fixed subset of the testcases and the public score \emph{hints} towards your real score, which can be either lower or higher.}
+\def\tFullFeedback{There is full feedback given for this task, i.e.~the public score shown equals your real score and you are shown the verdicts for all the testcases.}
