Put outcome in database also when dealing with user tests.
Closes #255.

--- a/cms/server/po/it.po
+++ b/cms/server/po/it.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-04-20 14:16+0200\n"
-"PO-Revision-Date: 2014-04-20 14:17+0200\n"
-"Last-Translator: Luca Wehrstedt <luca.wehrstedt@gmail.com>\n"
+"POT-Creation-Date: 2014-06-21 21:59+0200\n"
+"PO-Revision-Date: 2014-06-21 22:02+0200\n"
+"Last-Translator: Giovanni Mascellani <mascellani@poisson.phc.unipi.it>\n"
 "Language-Team: Italian <>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
@@ -97,6 +97,9 @@ msgstr "Parzialmente corretto"
 
 msgid "Invalid files in submission"
 msgstr "File non validi nella sottoposizione"
+
+msgid "Execution completed successfully"
+msgstr "Esecuzione completata con successo"
 
 msgid "No compilation needed"
 msgstr "Compilazione non necessaria"
@@ -423,11 +426,11 @@ msgstr "Automatica (%s)"
 
 #, python-format
 msgid ""
-"Logged in as <strong>%(first_name)s %(last_name)s</strong> <em>(%(username)s)"
-"</em>"
+"Logged in as <strong>%(first_name)s %(last_name)s</strong> "
+"<em>(%(username)s)</em>"
 msgstr ""
-"Accesso effettuato come <strong>%(first_name)s %(last_name)s</strong> <em>"
-"(%(username)s)</em>"
+"Accesso effettuato come <strong>%(first_name)s %(last_name)s</strong> "
+"<em>(%(username)s)</em>"
 
 msgid "Logout"
 msgstr "Logout"
