--- a/cms/server/po/messages.pot
+++ b/cms/server/po/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-04-20 14:16+0200\n"
+"POT-Creation-Date: 2014-06-21 21:59+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -91,6 +91,9 @@ msgid "Partially correct"
 msgstr ""
 
 msgid "Invalid files in submission"
+msgstr ""
+
+msgid "Execution completed successfully"
 msgstr ""
 
 msgid "No compilation needed"
@@ -410,8 +413,8 @@ msgstr ""
 
 #, python-format
 msgid ""
-"Logged in as <strong>%(first_name)s %(last_name)s</strong> <em>(%(username)s)"
-"</em>"
+"Logged in as <strong>%(first_name)s %(last_name)s</strong> "
+"<em>(%(username)s)</em>"
 msgstr ""
 
 msgid "Logout"
