--- a/cms/server/po/messages.pot
+++ b/cms/server/po/messages.pot
@@ -269,32 +269,6 @@ msgstr ""
 msgid "%(seconds)0.3f s"
 msgstr ""
 
-msgid "Too many print jobs!"
-msgstr ""
-
-#, python-format
-msgid "You have reached the maximum limit of at most %d print jobs."
-msgstr ""
-
-msgid "Invalid format!"
-msgstr ""
-
-msgid "File too big!"
-msgstr ""
-
-#, python-format
-msgid "Each file be at most %d bytes long."
-msgstr ""
-
-msgid "Print job storage failed!"
-msgstr ""
-
-msgid "Print job received"
-msgstr ""
-
-msgid "Your print job has been received."
-msgstr ""
-
 msgid "%Y-%m-%d"
 msgstr ""
 
@@ -436,8 +410,8 @@ msgstr ""
 
 #, python-format
 msgid ""
-"Logged in as <strong>%(first_name)s %(last_name)s</strong> "
-"<em>(%(username)s)</em>"
+"Logged in as <strong>%(first_name)s %(last_name)s</strong> <em>(%(username)s)"
+"</em>"
 msgstr ""
 
 msgid "Logout"
@@ -505,9 +479,6 @@ msgid "Documentation"
 msgstr ""
 
 msgid "Testing"
-msgstr ""
-
-msgid "Printing"
 msgstr ""
 
 msgid "Contest Management System"
@@ -702,46 +673,6 @@ msgstr ""
 msgid "No"
 msgstr ""
 
-msgid "Print"
-msgstr ""
-
-#, python-format
-msgid ""
-"You can print %(remaining_jobs)d more source code or PDF files of up to "
-"%(max_pages)d pages each."
-msgstr ""
-
-msgid "File (text or PDF)"
-msgstr ""
-
-msgid "Submit"
-msgstr ""
-
-msgid ""
-"You cannot print anything any more as you have used up your printing quota."
-msgstr ""
-
-msgid "Previous print jobs"
-msgstr ""
-
-msgid "Date and time"
-msgstr ""
-
-msgid "Time"
-msgstr ""
-
-msgid "File name"
-msgstr ""
-
-msgid "Status"
-msgstr ""
-
-msgid "no print jobs yet"
-msgstr ""
-
-msgid "Preparing..."
-msgstr ""
-
 msgid "Compilation output"
 msgstr ""
 
@@ -842,6 +773,9 @@ msgstr ""
 msgid "Submit a solution"
 msgstr ""
 
+msgid "Submit"
+msgstr ""
+
 msgid "submission.zip"
 msgstr ""
 
@@ -874,6 +808,15 @@ msgstr ""
 
 #, python-format
 msgid "But you will have to wait until %(expiration_time)s to use it."
+msgstr ""
+
+msgid "Date and time"
+msgstr ""
+
+msgid "Time"
+msgstr ""
+
+msgid "Status"
 msgstr ""
 
 msgid "Public score"
