--- a/cmscontrib/gerpythonformat/templates/lg/contestheader.tex
+++ b/cmscontrib/gerpythonformat/templates/lg/contestheader.tex
@@ -15,4 +15,5 @@ Aufgabe: {\bfseries \taskname}\vss}}
 \def\nofeedback{\feedbackheading Für diese Aufgabe ist kein erweitertes Feedback verfügbar. Die angegebene öffentliche Punktzahl entspricht nur deinem Ergebnis auf den öffentlichen Testfällen und hat im Allgemeinen wenig mit deiner tatsächlichen Punktzahl gemein.}
 \def\partialfeedback{\feedbackheading Für diese Aufgabe ist \emph{partial feedback} verfügbar, d.h.~du bekommst das Abschneiden deines Programms auf einer festen Auswahl der Testfälle zu sehen. Die angegebene Punktzahl bezieht sich auf diese Auswahl der Testfälle und gibt damit einen Hinweis auf deine tatsächliche Punktzahl. Letztere kann allerdings sowohl höher als auch niedriger als die angezeigte Punktzahl sein.}
 \def\fullfeedback{\feedbackheading Für diese Aufgabe ist \emph{full feedback} verfügbar, d.h.~die angezeigte Punktzahl entspricht deiner tatsächlichen Punktzahl.}
+\def\tokenfeedback{\feedbackheading Für die Aufgabe sind \emph{Tokens} verfügbar, d.h.~du kannst für eine begrenzte Anzahl von Einsendungen vollständiges Feedback erhalten, indem du ein sogenanntes Token einsetzt. Weitere Informationen, z.B. über die Anzahl der verfügbaren Tokens, findest du im Wettbewerbssystem.}
 \def\showfeedback{\csname\feedback feedback\endcsname}
