Make constraints more high-level
It is now possible to simply output the constraints for a variable in a given subtask in the latex document directly and, moreover, to query all the constraints of a given subtask.
At the same time, the \subtask macro has been added which acts like \st except that it automatically deduces the points for the given subtask (which was a parameter for \st)

--- a/cmscontrib/gerpythonformat/templates/lg/contestheader.tex
+++ b/cmscontrib/gerpythonformat/templates/lg/contestheader.tex
@@ -9,7 +9,10 @@ Aufgabe: {\bfseries \taskname}\vss}}
 \def\sthelper#1#2{{\sffamily\bfseries Teilaufgabe\ #1 (#2 Punkte).\enspace}}
 \newcount\stcount
 \stcount=0
-\def\st#1{\setbox0=\hbox{\sthelper{9}{99}}\global\advance\stcount by 1 \removelastskip\smallskip\noindent\hangindent=\wd0 \hangafter=1 \hbox to \wd0{\sthelper{\the\stcount}{#1}\hss}\ignorespaces}
+\def\st#1{\setbox0=\hbox{\sthelper{9}{99}}\global\advance\stcount by 1 \ifdim\lastskip<\smallskipamount\removelastskip\par\smallskip\fi\noindent\hangindent=\wd0 \hangafter=1 \hbox to \wd0{\sthelper{\the\stcount}{#1}\hss}\ignorespaces}
+\def\subtask{\count1=\stcount \advance\count1 by 1 \st{\subtaskpoints{\the\count1}}}
+\def\currconstraint#1{\scopedconstraint{\the\stcount}{#1}}
+\def\currconstraints{\currconstraint{@ll}}
 
 \def\showcases{\ifnum\numsamples=1\sheading{Beispiel}\else\sheading{Beispiele}\fi\testcasetable}
 \def\showlimits{\sheading{Limits}%
