small fix to the CEOI template

--- a/cmscontrib/gerpythonformat/templates/ceoi/contestheader.tex
+++ b/cmscontrib/gerpythonformat/templates/ceoi/contestheader.tex
@@ -8,8 +8,7 @@
 
 \translationheader
 
-\let\oldshowcases=\showcases
-\def\showcases{\subsection*{\tSample} \oldshowcases}
+\def\showcases{\subsection*{\tSample} \testcasetable}
 \def\showlimits{\subsection*{\tLimits} \tTimeLimit: \timelimit \\
 \tMemoryLimit: \memlimit}
 
