--- a/cmscontrib/gerpythonformat/templates/lg/contestheader.tex
+++ b/cmscontrib/gerpythonformat/templates/lg/contestheader.tex
@@ -42,9 +42,18 @@ Speicher: \memlimit}
 
 \def\feedbackheading{\sheading{Feedback}}
 \def\nofeedback{\feedbackheading Für diese Aufgabe ist kein erweitertes Feedback verfügbar. Die angegebene öffentliche Punktzahl entspricht nur deinem Ergebnis auf den öffentlichen Testfällen und hat im Allgemeinen wenig mit deiner tatsächlichen Punktzahl gemein.}
-\def\partialfeedback{\feedbackheading Für diese Aufgabe ist \emph{partial feedback} verfügbar, d.h.~du bekommst das Abschneiden deines Programms auf einer festen Auswahl der Testfälle zu sehen. Die angegebene Punktzahl bezieht sich auf diese Auswahl der Testfälle und gibt damit einen Hinweis auf deine tatsächliche Punktzahl. Letztere kann allerdings sowohl höher als auch niedriger als die angezeigte Punktzahl sein.}
-\def\fullfeedback{\feedbackheading Für diese Aufgabe ist \emph{full feedback} verfügbar, d.h.~die angezeigte Punktzahl entspricht deiner tatsächlichen Punktzahl.}
-\def\tokenfeedback{\feedbackheading Für die Aufgabe sind \emph{Tokens} verfügbar, d.h.~du kannst für eine begrenzte Anzahl von Einsendungen vollständiges Feedback erhalten, indem du ein sogenanntes Token einsetzt. Weitere Informationen, z.B. über die Anzahl der verfügbaren Tokens, findest du im Wettbewerbssystem.}
+\def\partialfeedback{\feedbackheading Für diese Aufgabe ist \emph{partial feedback} verfügbar, d.h.~du bekommst das Abschneiden deines Programms auf einer festen Auswahl der Testfälle zu sehen. Die angegebene Punktzahl bezieht sich auf diese Auswahl der Testfälle und gibt damit einen Hinweis auf die endgültige Punktzahl deiner Einsendung. Letztere kann allerdings sowohl höher als auch niedriger als die angezeigte Punktzahl sein.}
+\def\fullfeedback{\feedbackheading Für diese Aufgabe ist \ifrestricted\emph{restricted feedback}\else\emph{full feedback}\fi\ verfügbar. Das bedeutet, die angezeigte Punktzahl entspricht der endgültigen Punktzahl deiner Einsendung.
+\ifrestricted
+Allerdings werden dir für jede Testfallgruppe immer nur die Testfälle bis zum ersten Testfall mit minimaler Punktzahl innerhalb der entsprechenden Gruppe angezeigt. (Hierbei ist die Reihenfolge der Fälle innerhalb der jeweiligen Gruppen fest.)
+\else
+Ferner kannst du für jeden Testfall das jeweilige Urteil des Graders über deine Einsendung einsehen.
+\fi}
+\def\tokenfeedback{\feedbackheading Für diese Aufgabe sind \emph{Tokens} verfügbar, d.h.~du kannst für eine begrenzte Anzahl von Einsendungen vollständiges Feedback erhalten, indem du ein sogenanntes Token einsetzt. Weitere Informationen, z.B. über die Anzahl der verfügbaren Tokens, findest du im Wettbewerbssystem.
+
+\ifrestricted
+Allerdings werden dir auch nach Einsetzen eines Tokens für jede Testfallgruppe immer nur die Testfälle bis zum ersten Testfall mit minimaler Punktzahl innerhalb der entsprechenden Gruppe angezeigt. (Hierbei ist die Reihenfolge der Fälle innerhalb der jeweiligen Gruppen fest.)
+\fi}
 \let\dummyfeedack=\relax
 \def\showfeedback{\csname\feedback feedback\endcsname}
 
