--- a/cmscontrib/gerpythonformat/templates/lg/translation.tex
+++ b/cmscontrib/gerpythonformat/templates/lg/translation.tex
@@ -16,10 +16,10 @@
 \def\tNofeedback{Für diese Aufgabe ist kein erweitertes Feedback verfügbar. Die angegebene öffentliche Punktzahl entspricht nur deinem Ergebnis auf den öffentlichen Testfällen und hat im Allgemeinen wenig mit deiner tatsächlichen Punktzahl gemein.}
 \def\tPartialfeedback{Für diese Aufgabe ist \emph{partial feedback} verfügbar, d.h.~du bekommst das Abschneiden deines Programms auf einer festen Auswahl der Testfälle zu sehen. Die angegebene Punktzahl bezieht sich auf diese Auswahl der Testfälle und gibt damit einen Hinweis auf die endgültige Punktzahl deiner Einsendung. Letztere kann allerdings sowohl höher als auch niedriger als die angezeigte Punktzahl sein.}
 \def\tFullfeedbackGeneral{Für diese Aufgabe ist \feedbackmode\ verfügbar. Das bedeutet, die angezeigte Punktzahl entspricht der endgültigen Punktzahl deiner Einsendung.}
-\def\tRestrictedfeedbackPrecise{Allerdings werden dir für jede Testfallgruppe immer nur die Testfälle bis zum ersten Testfall mit minimaler Punktzahl innerhalb der entsprechenden Gruppe angezeigt. (Hierbei ist die Reihenfolge der Fälle innerhalb der jeweiligen Gruppen fest.)}
+\def\tRestrictedfeedbackPrecise{Allerdings wird dir für jede Testfallgruppe immer nur der erste Testfall mit minimaler Punktzahl innerhalb der entsprechenden Gruppe angezeigt. (Hierbei ist die Reihenfolge der Fälle innerhalb der jeweiligen Gruppen fest.)}
 \def\tFullfeedbackPrecise{Ferner kannst du für jeden Testfall das jeweilige Urteil des Graders über deine Einsendung einsehen.}
 \def\tTokenFeedback{Für diese Aufgabe sind \emph{Tokens} verfügbar, d.h.~du kannst für eine begrenzte Anzahl von Einsendungen vollständiges Feedback erhalten, indem du ein sogenanntes Token einsetzt. Weitere Informationen, z.B.~über die Anzahl der verfügbaren Tokens, findest du im Wettbewerbssystem.}
-\def\tTokenRestrictedFeedback{Allerdings werden dir auch nach Einsetzen eines Tokens für jede Testfallgruppe immer nur die Testfälle bis zum ersten Testfall mit minimaler Punktzahl innerhalb der entsprechenden Gruppe angezeigt. (Hierbei ist die Reihenfolge der Fälle innerhalb der jeweiligen Gruppen fest.)}
+\def\tTokenRestrictedFeedback{Allerdings wird dir auch nach Einsetzen eines Tokens für jede Testfallgruppe immer nur der erste Testfall mit minimaler Punktzahl innerhalb der entsprechenden Gruppe angezeigt. (Hierbei ist die Reihenfolge der Fälle innerhalb der jeweiligen Gruppen fest.)}
 }
 {
 % English translation
@@ -34,8 +34,8 @@
 \def\tNofeedback{No additional feedback is available for this task. The score shown refers to the results on the sample case(s) and in general doesn't correspond in any way to your real score.}
 \def\tPartialfeedback{Partial feedback is given for this task, i.e.~you can see the verdicts for a fixed subset of the testcases. The score shown refers to this selection of testcases and therefore \emph{hints} towards your real score, which can be either lower or higher.}
 \def\tFullfeedbackGeneral{\feedbackmode\ is given for this task, i.e.~the score shown equals your real score.}
-\def\tRestrictedfeedbackPrecise{However, for each testcase group you are only shown the verdicts for the testcases up to the first one with minimal score in that group. (The order of the testcases in each of the groups is fixed.)}
+\def\tRestrictedfeedbackPrecise{However, for each testcase group you are only shown the verdict for the first testcase with minimal score in that group. (The order of the testcases in each of the groups is fixed.)}
 \def\tFullfeedbackPrecise{Moreover, you are shown the verdicts for all the testcases.}
 \def\tTokenFeedback{\emph{Tokens} are available for this task, i.e.~you can obtain feedback for a limited number of submissions by applying a so called token. More information, e.g.~about the number of available tokens, can be found in the contest system.}
-\def\tTokenRestrictedFeedback{However, even when you've applied a token, for each testcase group you are only shown the verdicts for the testcases up to the first one with minimal score in that group. (The order of the testcases in each of the groups is fixed.)}
+\def\tTokenRestrictedFeedback{However, even when you've applied a token, for each testcase group you are only shown the verdict for the first testcase with minimal score in that group. (The order of the testcases in each of the groups is fixed.)}
 }
